--- a/slice/theme.conf
+++ b/slice/theme.conf
@@ -3,8 +3,8 @@ font=Roboto
 background=
 bg_mode=aspect
 parallax_bg_shift=20
-color_bg=#222222
-color_main=#dddddd
-color_dimmed=#888888
-color_contrast=#1f1f1f
+color_bg=#000000
+color_main=#FF9900
+color_dimmed=#995b00
+color_contrast=#9999ff
 manual=false
