--- a/slice/theme.conf
+++ b/slice/theme.conf
@@ -6,5 +6,5 @@ parallax_bg_shift=20
 color_bg=#000000
 color_main=#FF9900
 color_dimmed=#995b00
-color_contrast=#9999ff
+color_contrast=#000000
 manual=false
