--- a/slice/theme.conf
+++ b/slice/theme.conf
@@ -6,5 +6,8 @@ parallax_bg_shift=20
 color_bg=#000000
 color_main=#FF9900
 color_dimmed=#995b00
-color_contrast=#000000
+color_contrast=#cc99cc
+color_button_bg=#9999cc
+color_button_bg_selected=#9999ff
+color_button_text=#000000
 manual=false
